
    o Add functions ('xPieplot') for pie plot

    o Add functions ('xSH', 'xSHbase', 'xSHreorder', 'xSHtree') for supra-hexagonal map visualisation using ggplot2
    
    o Add functions ('xAge') for Phylostratigraphy analysis

    o Unify auxiliary functions ('xAuxFunArgs', 'xAuxRd2HTML', 'xAuxRdWrap' and 'xAuxEmbed')

    o Add a new function 'xReport' enabling dynamic reports
    

CHANGES IN VERSION 1.1.4
-----------------------

NEW FEATURES

    o Populate annotations

    o Add function 'xRPS' for calculating regulatory potential scores
    
    o Add functions ('xGRmanhattan' and 'xGRkaryogram') for genomic region manhattan and karyogram plot

    o Add functions ('xLDblock', 'xLDsampling' and 'xLDenricher') for LD block operations

    o Add functions ('xDefineOntology', 'xDefineGenomicAnno', 'xDefineEQTL' and 'xDefineHIC') for defining ontology and its annotations, genomic annotations, eQTL and promoter capture Hi-C datasets

    o Add function 'xPCHiCplot' for visualising promoter capture Hi-C datasets

    o Add function 'xBiproject' for bigraph projection
    
    o Add functions ('xRWenricher' and 'xRWkernel') for network enrichment analysis

    o Add function 'xRepurpose' for drug repurposing
    

CHANGES IN VERSION 1.1.3
-----------------------

NEW FEATURES

    o Populate annotations
    
    o Fix bugs in the function 'xGRviaGenomicAnno' (disabling OR calculation)
    
    o Add function 'xEnrichHeatmap' for visualising enrichment results in a heatmap
    
    o Add functions ('xGRoverlap' and 'xGRtrack') enabling extraction and analysis of genomic scores
    

CHANGES IN VERSION 1.1.2
-----------------------

NEW FEATURES

    o Populate annotations
    
    o Fix bugs in the functions 'xEnrichConciser' and 'xEnrichForest'
