@@ -123,6 +123,7 @@ export(xLDenricher)
 export(xLDsampling)
 export(xLayout)
 export(xLiftOver)
+export(xME)
 export(xOBOcode)
 export(xObjSize)
 export(xPCHiCplot)
